Additions to layout page and styles

--- a/MVC.WebUI/Content/css/scss/_mixins.scss
+++ b/MVC.WebUI/Content/css/scss/_mixins.scss
@@ -4,15 +4,15 @@
 
 @mixin gradient($startColour, $endColour, $startPercent: 0%, $endPercent: 100%) {
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#{$startColour}', endColorstr='#{$endColour}', GradientType=0);
-    /* Mozilla Firefox */ 
+    /* Mozilla Firefox */
     background-image: -moz-linear-gradient(top, $startColour $startPercent, $endColour $endPercent);
-    /* IE10 Consumer Preview */ 
+    /* IE10 Consumer Preview */
     background-image: -ms-linear-gradient(top, $startColour $startPercent, $endColour $endPercent);
-    /* Opera */ 
+    /* Opera */
     background-image: -o-linear-gradient(top, $startColour $startPercent, $endColour $endPercent);
-    /* Webkit (Safari/Chrome 10) */ 
+    /* Webkit (Safari/Chrome 10) */
     background-image: -webkit-gradient(linear, left top, left bottom, color-stop(#{$startPercent / 100%}, $startColour), color-stop(#{$endPercent / 100%}, $endColour));
-    /* Webkit (Chrome 11+) */ 
+    /* Webkit (Chrome 11+) */
     background-image: -webkit-linear-gradient(top, $startColour $startPercent, $endColour $endPercent);
     /* W3C */
     background-image: linear-gradient(to bottom, $startColour $startPercent, $endColour $endPercent);
@@ -25,9 +25,11 @@
 /***********************************************************************************************************************/
 
 @mixin border-radius($px) {
-  @include pxtorem(-webkit-border-radius, $px);
-  @include pxtorem(-moz-border-radius, $px);
-  @include pxtorem(border-radius, $px);
+    /* Chrome 1-4, Safari 3.1-4 */
+    @include pxtorem(-webkit-border-radius, $px);
+    /* Firefox 2-3.6 */
+    @include pxtorem(-moz-border-radius, $px);
+    @include pxtorem(border-radius, $px);
 }
 
 
@@ -43,9 +45,9 @@
 }
 
 @mixin box-shadow ($string) {
-  -webkit-box-shadow: $string;
-  -moz-box-shadow:    $string;
-  box-shadow:         $string;
+    -webkit-box-shadow: $string;
+    -moz-box-shadow: $string;
+    box-shadow: $string;
 }
 
 
@@ -118,10 +120,7 @@
     @font-face {
         font-family: '#{$font-family}';
         src: url('#{$font-path}.eot');
-        src: url('#{$font-path}.eot?#iefix') format('embedded-opentype'),
-        url('#{$font-path}.woff') format('woff'),
-        url('#{$font-path}.ttf') format('truetype'),
-        url('#{$font-path}.svg##{$font-family}') format('svg');
+        src: url('#{$font-path}.eot?#iefix') format('embedded-opentype'), url('#{$font-path}.woff') format('woff'), url('#{$font-path}.ttf') format('truetype'), url('#{$font-path}.svg##{$font-family}') format('svg');
         font-weight: $font-weight;
         font-style: $font-style;
         font-stretch: $font-stretch;
@@ -133,42 +132,42 @@
 /*https://css-tricks.com/snippets/css/less-mixin-for-rem-font-sizing/*/
 
 @function strip-unit($num) {
-  @return $num / ($num * 0 + 1);
+    @return $num / ($num * 0 + 1);
 }
 
 @mixin rem($property, $values...) {
-  $max: length($values);
-  $pxValues: '';
-  $remValues: '';
+    $max: length($values);
+    $pxValues: '';
+    $remValues: '';
 
-  @for $i from 1 through $max {
-    $value: strip-unit(nth($values, $i));
-    $pxValues: #{$pxValues + $value};
+    @for $i from 1 through $max {
+        $value: strip-unit(nth($values, $i));
+        $pxValues: #{$pxValues + $value};
 
-    @if $value != 0 {
-        $pxValues: #{$pxValues}px;
+        @if $value != 0 {
+            $pxValues: #{$pxValues}px;
+        }
+
+        @if $i < $max {
+            $pxValues: #{$pxValues + " "};
+        }
     }
 
-    @if $i < $max {
-      $pxValues: #{$pxValues + " "};
-    }
-  } 
+    @for $i from 1 through $max {
+        $value: strip-unit(nth($values, $i));
+        $remValues: #{$remValues + $value/16};
 
-  @for $i from 1 through $max {
-    $value: strip-unit(nth($values, $i));
-    $remValues: #{$remValues + $value/16};
+        @if $value != 0 {
+            $remValues: #{$remValues}rem;
+        }
 
-    @if $value != 0 {
-        $remValues: #{$remValues}rem;
+        @if $i < $max {
+            $remValues: #{$remValues + " "};
+        }
     }
 
-    @if $i < $max {
-      $remValues: #{$remValues + " "};
-    }
-  } 
-  
-  #{$property}: $pxValues; 
-  #{$property}: $remValues; 
+    #{$property}: $pxValues;
+    #{$property}: $remValues;
 }
 
 
@@ -178,23 +177,47 @@
 /*https://css-tricks.com/snippets/css/less-mixin-for-rem-font-sizing/*/
 
 @mixin rem-only($property, $values...) {
-  $max: length($values);
-  $remValues: '';
+    $max: length($values);
+    $remValues: '';
 
-  @for $i from 1 through $max {
-    $value: strip-unit(nth($values, $i));
-    $remValues: #{$remValues + $value/16};
+    @for $i from 1 through $max {
+        $value: strip-unit(nth($values, $i));
+        $remValues: #{$remValues + $value/16};
 
-    @if $value != 0 {
-        $remValues: #{$remValues}rem;
+        @if $value != 0 {
+            $remValues: #{$remValues}rem;
+        }
+
+        @if $i < $max {
+            $remValues: #{$remValues + " "};
+        }
     }
 
-    @if $i < $max {
-      $remValues: #{$remValues + " "};
+    #{$property}: $remValues;
+}
+
+
+/***********************************************************************************************************************/
+/* FORMS */
+/***********************************************************************************************************************/
+
+@mixin placeholder($selector) {
+
+    #{$selector}::-webkit-input-placeholder {
+        @content;
     }
-  } 
-  
-  #{$property}: $remValues; 
+    /* Firefox 18- */
+    #{$selector}:-moz-placeholder {
+        @content;
+    }
+    /* Firefox 19+ */
+    #{$selector}::-moz-placeholder {
+        @content;
+    }
+
+    #{$selector}:-ms-input-placeholder {
+        @content;
+    }
 }
 
 
@@ -209,18 +232,26 @@ $phone-max-width: 450px;
 $tablet-max-width: 768px;
 
 @mixin respond-to($media) {
-  @if $media == phone {
-    @media only screen and (max-width: $phone-max-width) { @content; }
-  }
-  @else if $media == phone-tablet {
-    @media only screen and (max-width: $tablet-max-width) { @content; }
-  }
-  @else if $media == tablet {
-    @media only screen and (min-width: $phone-max-width + 1) and (max-width: $tablet-max-width) { @content; }
-  }
-  @else if $media == desktop {
-    @media only screen and (min-width: $tablet-max-width + 1) { @content; }
-  }
+    @if $media == phone {
+        @media only screen and (max-width: $phone-max-width) {
+            @content;
+        }
+    }
+    @else if $media == phone-tablet {
+        @media only screen and (max-width: $tablet-max-width) {
+            @content;
+        }
+    }
+    @else if $media == tablet {
+        @media only screen and (min-width: $phone-max-width + 1) and (max-width: $tablet-max-width) {
+            @content;
+        }
+    }
+    @else if $media == desktop {
+        @media only screen and (min-width: $tablet-max-width + 1) {
+            @content;
+        }
+    }
 }
 
 
@@ -241,18 +272,14 @@ $tablet-max-width: 768px;
 /* https://css-tricks.com/snippets/css/cross-browser-opacity/ */
 @mixin opacity($opacity) {
     /* IE 8 */
-  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=$opacity * 100)";
-
-  /* IE 5-7 */
-  filter: alpha(opacity=$opacity * 100);
-
-  /* Netscape */
-  -moz-opacity: $opacity;
-
-  /* Safari 1.x */
-  -khtml-opacity: $opacity;
-
-  opacity: $opacity;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=$opacity * 100)";
+    /* IE 5-7 */
+    filter: alpha(opacity=$opacity * 100);
+    /* Netscape */
+    -moz-opacity: $opacity;
+    /* Safari 1.x */
+    -khtml-opacity: $opacity;
+    opacity: $opacity;
 }
 
 @mixin animation($animation) {
@@ -278,36 +305,36 @@ $tablet-max-width: 768px;
 }
 
 @mixin word-wrap() {
-  word-break:     break-word;
-  -webkit-hyphens: auto;
-  -moz-hyphens:    auto;
-  hyphens:         auto;
+    word-break: break-word;
+    -webkit-hyphens: auto;
+    -moz-hyphens: auto;
+    hyphens: auto;
 }
 
 @mixin ellipsis() {
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 @mixin cover() {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
 }
 
 @mixin hyphens($hyphens: auto) {
-	-moz-hyphens: $hyphens; /* Firefox 6+ */
-	-webkit-hyphens: $hyphens; /* Safari 5.1+, IOS Safari 4.3+ */
-	-ms-hyphens: $hyphens; /* IE 10+ */
-	hyphens: $hyphens;
+    -moz-hyphens: $hyphens; /* Firefox 6+ */
+    -webkit-hyphens: $hyphens; /* Safari 5.1+, IOS Safari 4.3+ */
+    -ms-hyphens: $hyphens; /* IE 10+ */
+    hyphens: $hyphens;
 }
 
 @mixin centre() {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  @include transform(translate(-50%, -50%));
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    @include transform(translate(-50%, -50%));
 }
