--- a/MVC.WebUI/Content/css/scss/website/bootstrap.scss
+++ b/MVC.WebUI/Content/css/scss/website/bootstrap.scss
@@ -38,9 +38,163 @@
 }
 
 
+.accessible-hide {
+    position: fixed;
+    left: 100%;
+}
+
 /************************************************************************************************************************************************************************************/
 /* LAYOUTS */
 /************************************************************************************************************************************************************************************/
+
+/************************************************************************************************************************************************************************************/
+/* Grid Layout */
+/* http://www.w3schools.com/css/css_rwd_grid.asp */
+
+/*
+    EXAMPLE:
+
+     <div class="grid">
+        <div class="col-3 col-m-3">...</div>
+        <div class="col-6 col-m-9">...</div>
+        <div class="col-3 col-m-12">...</div>
+    </div>
+*/
+
+.grid {
+    [class*="col-"] {
+        float: left;
+        padding: 15px;
+        box-sizing: border-box;
+    }
+
+    /* to remove gutter from first and last columns - optional */
+    [class*="col-"]:first-child {
+        margin-left: -15px;
+    }
+
+    [class*="col-"]:last-child {
+        margin-right: -15px;
+    }
+
+    &:after {
+        content: "";
+        clear: both;
+        display: block;
+    }
+}
+
+/* for mobile phones: */
+[class*="col-"] {
+    width: 100%;
+}
+
+@media only screen and (min-width: 600px) {
+    /* for tablets: */
+    .grid {
+        .col-m-1 {
+            width: 8.33%;
+        }
+
+        .col-m-2 {
+            width: 16.66%;
+        }
+
+        .col-m-3 {
+            width: 25%;
+        }
+
+        .col-m-4 {
+            width: 33.33%;
+        }
+
+        .col-m-5 {
+            width: 41.66%;
+        }
+
+        .col-m-6 {
+            width: 50%;
+        }
+
+        .col-m-7 {
+            width: 58.33%;
+        }
+
+        .col-m-8 {
+            width: 66.66%;
+        }
+
+        .col-m-9 {
+            width: 75%;
+        }
+
+        .col-m-10 {
+            width: 83.33%;
+        }
+
+        .col-m-11 {
+            width: 91.66%;
+        }
+
+        .col-m-12 {
+            width: 100%;
+        }
+    }
+}
+
+@media only screen and (min-width: 768px) {
+    /* for desktop: */
+    .grid {
+
+        .col-1 {
+            width: 8.33%;
+        }
+
+        .col-2 {
+            width: 16.66%;
+        }
+
+        .col-3 {
+            width: 25%;
+        }
+
+        .col-4 {
+            width: 33.33%;
+        }
+
+        .col-5 {
+            width: 41.66%;
+        }
+
+        .col-6 {
+            width: 50%;
+        }
+
+        .col-7 {
+            width: 58.33%;
+        }
+
+        .col-8 {
+            width: 66.66%;
+        }
+
+        .col-9 {
+            width: 75%;
+        }
+
+        .col-10 {
+            width: 83.33%;
+        }
+
+        .col-11 {
+            width: 91.66%;
+        }
+
+        .col-12 {
+            width: 100%;
+        }
+    }
+}
 
 /************************************************************************************************************************************************************************************/
 /* Layout Table - using CSS display: table */
