--- a/MVC.WebUI/Content/css/scss/_mixins.scss
+++ b/MVC.WebUI/Content/css/scss/_mixins.scss
@@ -338,3 +338,12 @@ $tablet-max-width: 768px;
     left: 50%;
     @include transform(translate(-50%, -50%));
 }
+
+
+@mixin unselectable() {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
