--- a/MVC.WebUI/Content/css/scss/reset.scss
+++ b/MVC.WebUI/Content/css/scss/reset.scss
@@ -31,6 +31,21 @@ html {
 }
 
 /* UNIVERSAL ATTRIBUTES *********************************************************************************************************************************************************************************************/
+::-moz-selection {
+    /*color: #FFF;
+    background-color: #000;*/
+}
+
+::selection {
+    /*color: #FFF;
+    background-color: #000;*/
+}
+
+/* Blink - emulate Gecko behaviour to make content stretch to fill the screen */
+:-webkit-full-screen {
+    width: 100%;
+    height: 100%;
+}
 
 [disabled] {
     opacity: 0.5;
