--- a/MVC.WebUI/Content/css/scss/print.scss
+++ b/MVC.WebUI/Content/css/scss/print.scss
@@ -13,7 +13,7 @@
 =========================================================================================================================================
 */
 
-	* {
+	*, *::before, *::after {
 		background-color: #FFF !important;
 		background-image: none !important;
 		border-color: #000 !important;
