--- a/MVC.WebUI/Content/website/css/scss/_variables.scss
+++ b/MVC.WebUI/Content/website/css/scss/_variables.scss
@@ -2,3 +2,10 @@
 /* http://thesassway.com/intermediate/responsive-web-design-in-sass-using-media-queries-in-sass-32 */
 $phone-width: "only screen and (max-width: 400px)";
 $tablet-width: "only screen and (min-width: 401px) and (max-width: 800px)";
+
+
+
+
+$ok-colour: #336633;
+$warning-color: yellow;
+$error-color: #CC0000;
