--- a/MVC.WebUI/Content/website/css/scss/_core/code.scss
+++ b/MVC.WebUI/Content/website/css/scss/_core/code.scss
@@ -32,6 +32,37 @@ pre.code-block {
     }
 }
 
+pre.code {
+    min-width: 100%;
+    margin: 1em 0;
+    padding: 0.8em 1em;
+    border: 0.0625em dotted #CCCC99;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    font-size: 0.85rem;
+    color: #000;
+    background-color: #FFFFEE;
+    white-space: normal;
+    overflow: auto;
+    word-wrap: normal; /* word-wrap has been renamed to overflow-wrap */
+    overflow-wrap: normal;
+    resize: horizontal;
+
+    & > code:only-of-type {
+        display: block;
+        min-height: 1.2em;
+        font-weight: normal;
+        white-space:pre;
+    }
+
+    var {
+        color: #CC0000;
+    }
+}
+
+
+
 
 
 
@@ -40,12 +71,12 @@ pre.code-block {
 
 p, li {
     code {
-        padding: 2px 4px;
-        border: 1px solid #E1E1E1;
+        padding: 0.125em 0.25em;
+        border: 0.0625em solid #E1E1E1;
         font-size: 0.9em;
         color: #C7254E;
         background-color: #F9F2F4;
-        box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1);
+        box-shadow: 0 0.0625em 0.25em rgba(0, 0, 0, 0.1);
     }
 
     var {
